--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="carousel-item active  col-lg-12 col-sm-12 col-md-12">
               <div class="card-wrapper container-sm d-flex   justify-content-around">
                   <!--  FIRST CARD -->
-                  <div class="card" style="width: 18rem;">
+                  <div class="card col-lg-4 col-sm-4 col-md-4" style="width: 18rem;">
                       <div class="card-body ourservicesfirstcard">
                           <img src="assets/img/card1.png"  class="img-fluid" alt="">
                           <h5 class="card-title">Aesthetic Gynecology</h5>
@@ -192,7 +192,7 @@
                       </div>
                  </div>
                   <!--  SECOND CARD -->
-                 <div class="col-4">
+                 <div class="col-4 col-lg-4 col-sm-4 col-md-4">
                   <div class="card" style="width: 18rem;">
                       <div class="card-body ourservicessecondcard">
                          <img src="assets/img/card3.png" alt="">
@@ -203,7 +203,7 @@
                   </div>
                 </div>
                   <!--  THIRD  CARD -->
-                <div class="card" style="width: 18rem;">
+                <div class="card col-lg-4 col-sm-4 col-md-4" style="width: 18rem;">
                   <div class="card-body ourservicesthirdcard">
                         <img src="assets/img/card2.png" alt="">
                         <h5 class="card-title">State-of-the-art-Technology</h5>
@@ -216,7 +216,7 @@
           <div class="carousel-item  col-lg-12 col-sm-12 col-md-12">
               <div class="card-wrapper container-sm d-flex   justify-content-around">
                   <!--  FOURTH  CARD -->
-                    <div class="card" style="width: 18rem;">
+                    <div class="card col-lg-4 col-sm-4 col-md-4" style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
                             <h5 class="card-title">State-of-the-art-Technology</h5>
@@ -224,8 +224,8 @@
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                       </div>
                 </div>
-                  <!--  FOURTH  CARD -->
-                    <div class="card" style="width: 18rem;">
+                  <!--  FIFTH  CARD -->
+                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
                             <h5 class="card-title">State-of-the-art-Technology</h5>
@@ -233,8 +233,8 @@
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                       </div>
                 </div>
-                  <!--  FOURTH  CARD -->
-                    <div class="card" style="width: 18rem;">
+                  <!--  SIXTH  CARD -->
+                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
                             <h5 class="card-title">State-of-the-art-Technology</h5>
@@ -246,8 +246,8 @@
           </div>
           <div class="carousel-item  col-lg-12 col-sm-12 col-md-12">
               <div class="card-wrapper container-sm d-flex  justify-content-around">
-                    <!--  FOURTH  CARD --> 
-                    <div class="card" style="width: 18rem;">
+                    <!--  SEVENTH  CARD --> 
+                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
                             <h5 class="card-title">State-of-the-art-Technology</h5>
@@ -255,8 +255,8 @@
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                       </div>
                 </div>
-                  <!--  FOURTH  CARD -->
-                    <div class="card" style="width: 18rem;">
+                  <!--  EIGHT  CARD -->
+                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
                             <h5 class="card-title">State-of-the-art-Technology</h5>
@@ -264,8 +264,8 @@
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                       </div>
                     </div>
-                  <!--  FOURTH  CARD -->
-                    <div class="card" style="width: 18rem;">
+                  <!--  NINTH  CARD -->
+                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
                             <h5 class="card-title">State-of-the-art-Technology</h5>
