adding services pages

--- a/index.html
+++ b/index.html
@@ -217,54 +217,24 @@
               <div class="card-wrapper container-sm d-flex   justify-content-around">
                   <!--  FOURTH  CARD -->
                     <div class="card col-lg-4 col-sm-4 col-md-4" style="width: 18rem;">
-                      <div class="card-body ourservicesthirdcard">
+                      <div class="card-body ourservicesfirstcard">
                             <img src="assets/img/card2.png" alt="">
-                            <h5 class="card-title">State-of-the-art-Technology</h5>
-                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <h5 class="card-title">Pleasent Environment</h5>
+                            <p class="card-text"> We understand the delicate nature of cosmetic gynecological procedures and our clinic offers a warm, friendly and discreet environment in which you can feel comfortable. 
+                            </p>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                       </div>
                 </div>
                   <!--  FIFTH  CARD -->
                     <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
-                      <div class="card-body ourservicesthirdcard">
+                      <div class="card-body ourservicessecondcard">
                             <img src="assets/img/card2.png" alt="">
-                            <h5 class="card-title">State-of-the-art-Technology</h5>
-                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <h5 class="card-title">Personal support</h5>
+                            <p class="card-text">TYour goals and concerns are our top priority. We take the time to understand your specific needs and create customized treatment plans to achieve the results you desire. Cosmetic Gynecology in Kakinada At Aruna Hospital Couples Clinics, we are proud to be at the forefront of Cosmetic Gynecology in Kakinada. </p>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                       </div>
                 </div>
                   <!--  SIXTH  CARD -->
-                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
-                      <div class="card-body ourservicesthirdcard">
-                            <img src="assets/img/card2.png" alt="">
-                            <h5 class="card-title">State-of-the-art-Technology</h5>
-                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                      </div>
-                </div>
-              </div>
-          </div>
-          <div class="carousel-item  col-lg-12 col-sm-12 col-md-12">
-              <div class="card-wrapper container-sm d-flex  justify-content-around">
-                    <!--  SEVENTH  CARD --> 
-                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
-                      <div class="card-body ourservicesthirdcard">
-                            <img src="assets/img/card2.png" alt="">
-                            <h5 class="card-title">State-of-the-art-Technology</h5>
-                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                      </div>
-                </div>
-                  <!--  EIGHT  CARD -->
-                    <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
-                      <div class="card-body ourservicesthirdcard">
-                            <img src="assets/img/card2.png" alt="">
-                            <h5 class="card-title">State-of-the-art-Technology</h5>
-                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                      </div>
-                    </div>
-                  <!--  NINTH  CARD -->
                     <div class="card col-lg-4 col-sm-4 col-md-4 " style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
@@ -406,26 +376,6 @@
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                       <div class="accordion-body">
                         <!-- <strong>This is the first item's accordion body.</strong> -->
-                       <li>Hymenoplasty</li>
-                       <li>Labiominoraplasty</li>
-                       <li>Labiomajoraplasty</li>
-                       <li>Clitoral hood reduction</li>
-                       <li>Clitoral unhooding</li>
-                       <li>Monsplasty</li>
-                       <!-- <code>.accordion-body</code> -->
-                       <a href="#" class="btn btn-primary">Click Here</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                        FEMALE (SURGICAL)
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                      <div class="accordion-body">
-                       <!-- <strong>This is the first item's accordion body.</strong> -->
                        <li>Hymenoplasty</li>
                        <li>Labiominoraplasty</li>
                        <li>Labiomajoraplasty</li>
