adding our services images

--- a/appoinment.html
+++ b/appoinment.html
@@ -28,10 +28,10 @@
     <section>
         <div class="container mainsection">
             <div class="row"> 
-                <div class="col-6 mt-5 ps-5 mainsectionimage">
+                <div class="col-lg-6  col-sm-12 col-md-12 ps-5 mainsectionimage">
                      <img src="assets/img/appoinment.png" alt="" height="auto" width="auto">
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-sm-12 col-md-12">
                     <h1 class="mt-5">Make An Appoinment</h1>
                     <br>
                     <form id="appoinmentfrom">
