--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section class="md-5 d-flex"> 
     <div class="container">
        <div class="row"> 
-         <div class="col-1 ">
+         <div class="col-1 fulfilingloveiconbar">
             <div class="col-lg-3 mt-5"> 
             <img src="assets/img/facebook.png" alt="">
             </div>
@@ -343,7 +343,7 @@
                         <li>G-Shot</li>
                         <li>O-Shot</li>
                         <!-- <code>.accordion-body</code> -->
-                        <a href="#" class="btn btn-primary">Click Here</a>
+                        <a href="femalenonsurgical.html" class="btn btn-primary">Click Here</a>
                       </div>
                     </div>
                   </div>
@@ -363,7 +363,7 @@
                        <li>Clitoral unhooding</li>
                        <li>Monsplasty</li>
                        <!-- <code>.accordion-body</code> -->
-                       <a href="#" class="btn btn-primary">Click Here</a>
+                       <a href="femalesurgical.html" class="btn btn-primary">Click Here</a>
                       </div>
                     </div>
                   </div>
@@ -383,7 +383,7 @@
                        <li>Clitoral unhooding</li>
                        <li>Monsplasty</li>
                        <!-- <code>.accordion-body</code> -->
-                       <a href="#" class="btn btn-primary">Click Here</a>
+                       <a href="male.html" class="btn btn-primary">Click Here</a>
                       </div>
                     </div>
                   </div>
@@ -403,7 +403,7 @@
                        <li>HIFEM Chair ( Emsella Chair)</li>
                        <li>P-Shot</li>
                        <!-- <code>.accordion-body</code> -->
-                       <a href="#" class="btn btn-primary">Click Here</a>
+                       <a href="ExectileDysfunctionProcedure.html" class="btn btn-primary">Click Here</a>
                       </div>
                     </div>
                   </div>
@@ -509,6 +509,7 @@
   <!-- ENDING FOUNDERS -->
 
   <!--  FOOTER -->
+  <footer> 
   <section>
     <div class="container-fluid" id="footer">
       <div class="container">
@@ -555,6 +556,7 @@
       </div>
     </div>
   </section>
+</footer>
   <!--  ENDING  FOOTER -->
 
   <!-- javascripit scripit plugins -->
