--- a/about.html
+++ b/about.html
@@ -23,46 +23,46 @@
 </head>
 <body>
 
- <!-- Header -->
- <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-    <!-- <div class="col-3"> 
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-          <div class="row"> 
-            <div class="col-3 ps-5"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-                </li>
-            </div>
-             <div class="col-3 ps-5"> 
-               <li class="nav-item ps-5">
-                  <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-               </li>
-             </div>
-            <div class="col-3 ps-5"> 
-                <li class="nav-item mt-3  ps-2 navbarphonenumber">
-                    <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
-                </li>
-            </div>
-            <div class="col-3 ps-5  mt-2 navbarappoinment"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                </li>
-            </div>
-          </div>
-          </ul>
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="col-3"> 
+        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
       </div>
-  </div>
-</nav>
-
-<!-- Ending  Header -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <div class="row"> 
+              <!-- <div class="col-3 ps-5"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                  </li>
+              </div> -->
+               <div class="col-3 ps-5"> 
+                 <li class="nav-item ps-5">
+                    <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                 </li>
+               </div>
+              <div class="col-3 ps-5"> 
+                  <li class="nav-item mt-3  ps-2 navbarphonenumber">
+                      <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
+                  </li>
+              </div>
+              <div class="col-3 ps-5  mt-2 navbarappoinment"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                  </li>
+              </div>
+            </div>
+            </ul>
+        </div>
+    </div>
+  </nav>
+  
+  <!-- Ending  Header -->
 
 <!--  ABOUT US  -->
 
@@ -71,7 +71,6 @@
           <div class="container"> 
               <div class="row"> 
                       <div class="col-6 aboutuscontent">
-                           <!-- <img src="assets/img/about.png" alt=""> -->
                            <h1>About Us</h1>
                            <h2>Improving lives by Couples Therapy</h2>
                       </div>
@@ -83,13 +82,12 @@
 
 <!-- ENDING  ABOUT US  -->
 
-
 <!--    OUR STORY  -->
 
 <section class="ourstory mb-5">
     <div class="container"> 
         <div class="card" style="width: 60rem;">
-            <div class="card-body  container">
+            <div class="card-body  container col-lg-12">
                   <h1  class="p-5 text-center">Our Story</h1>
                   <p   class="ps-5 pe-5">As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
 
@@ -106,6 +104,7 @@
 <!--  ENDING OUR STORY -->
 
 <!--  FOOTER -->
+<footer> 
 <section>
   <div class="container-fluid" id="footer">
     <div class="container">
@@ -152,6 +151,7 @@
     </div>
   </div>
 </section>
+</footer>
 <!--  ENDING  FOOTER -->
 
 
