--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
  <!-- Header -->
  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
   <div class="container-fluid d-flex justify-content-between align-items-center">
-    <!-- <div class="col-3"> 
+    <div class="col-3"> 
       <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div> -->
+    </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,11 +36,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
           <div class="row"> 
-            <div class="col-3 ps-5"> 
+            <!-- <div class="col-3 ps-5"> 
                 <li class="nav-item ps-5">
                     <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
                 </li>
-            </div>
+            </div> -->
              <div class="col-3 ps-5"> 
                <li class="nav-item ps-5">
                   <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
@@ -122,6 +122,7 @@
 
 
 <!--  FOOTER -->
+<footer> 
 <section>
   <div class="container-fluid" id="footer">
     <div class="container">
@@ -167,6 +168,7 @@
     </div>
   </div>
 </section>
+</footer>
 <!--  ENDING  FOOTER -->
 
 </body>
