adding images in services page Erectile Dysfunction

--- a/about.html
+++ b/about.html
@@ -89,11 +89,9 @@
         <div class="card" style="width: 60rem;">
             <div class="card-body  container col-lg-12">
                   <h1  class="p-5 text-center">Our Story</h1>
-                  <p   class="ps-5 pe-5">As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
-
-                  <p  class="ps-5 pe-5">Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
-
-                  <p  class="ps-5 pe-5 pb-5">Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
+                  <p>As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
+                  <p>Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
+                  <p>Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
                   Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
                   </p>
             </div>
@@ -136,9 +134,10 @@
           <!--  SECOND BLOCK -->
           <div class="col-lg-3  col-sm-6  footersecondblock">
             <h5 class="pb-3">ADDRESS</h5>
-            <h6>D.No 8-19-14/5,</h6>
+            <h6>D.No 8-19-4/6,</h6>
             <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
-            <h6>Chagantivari Street, KAKINADA-5333004</h6>
+            <h6>Chagantivari Street,</h6>
+            <h6>KAKINADA ANDHRA PRADESH-5333004</h6>
           </div>
           <!--  THIRD BLOCK -->
           <div class="col-lg-2  col-sm-6  footerthirdblock">
