--- a/index.html
+++ b/index.html
@@ -508,8 +508,9 @@
   </section>
   <!-- ENDING FOUNDERS -->
 
-  <!--  FOOTER -->
-  <footer> 
+<!--  FOOTER -->
+
+<footer> 
   <section>
     <div class="container-fluid" id="footer">
       <div class="container">
@@ -532,18 +533,19 @@
             </div>
             <!--  FIRST BLOCK -->
             <div class="col-lg-2  col-sm-6 footerfirstblock">
-              <h5 class="pb-3">QUICK LINKS</h5>
-              <h6><a href="index.html">Home</a></h6>
-              <h6><a href="index.html">Department</a></h6>
-              <h6><a href="about.html">About</a></h6>
-              <h6><a href="contact.html">Contanct</a></h6>
+                <h5 class="pb-3">QUICK LINKS</h5>
+                <h6><a href="index.html">Home</a></h6>
+                <h6><a href="index.html">Department</a></h6>
+                <h6><a href="about.html">About</a></h6>
+                <h6><a href="contact.html">Contanct</a></h6>
             </div>
             <!--  SECOND BLOCK -->
             <div class="col-lg-3  col-sm-6  footersecondblock">
               <h5 class="pb-3">ADDRESS</h5>
-              <h6>D.No 8-19-14/5,</h6>
+              <h6>D.No 8-19-4/6,</h6>
               <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
-              <h6>Chagantivari Street, KAKINADA-5333004</h6>
+              <h6>Chagantivari Street,</h6>
+              <h6>KAKINADA ANDHRA PRADESH-5333004</h6>
             </div>
             <!--  THIRD BLOCK -->
             <div class="col-lg-2  col-sm-6  footerthirdblock">
@@ -556,7 +558,8 @@
       </div>
     </div>
   </section>
-</footer>
+  </footer>
+  
   <!--  ENDING  FOOTER -->
 
   <!-- javascripit scripit plugins -->
