--- a/male.html
+++ b/male.html
@@ -139,55 +139,58 @@
 
  
 <!--  FOOTER -->
+
 <footer> 
-<section>
-  <div class="container-fluid" id="footer">
-    <div class="container">
-        <div class="row">
-         <!--  FIRSTBLOCK -->
-          <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
-              <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
-              <div class="row"> 
-                <div class="col-1">
-                    <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank"><i class="bi bi-facebook text-light"></i></a>
-                </div>
-                <div class="col-1">
-                    <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank"><i class="bi bi-youtube text-light"></i></a>
-                </div>
-                <div class="col-1">
-                    <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY" target="_blank"><i class="bi bi-instagram text-light"></i></a>
-                </div>
+    <section>
+      <div class="container-fluid" id="footer">
+        <div class="container">
+            <div class="row">
+             <!--  FIRSTBLOCK -->
+              <div class="col-lg-5  col-sm-6 footer">
+                  <img src="assets/img/Group 5 (1).png" alt="">
+                  <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
+                  <div class="row"> 
+                    <div class="col-1">
+                        <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank"><i class="bi bi-facebook text-light"></i></a>
+                    </div>
+                    <div class="col-1">
+                        <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank"><i class="bi bi-youtube text-light"></i></a>
+                    </div>
+                    <div class="col-1">
+                        <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY" target="_blank"><i class="bi bi-instagram text-light"></i></a>
+                    </div>
+                  </div>
+              </div>
+              <!--  FIRST BLOCK -->
+              <div class="col-lg-2  col-sm-6 footerfirstblock">
+                  <h5 class="pb-3">QUICK LINKS</h5>
+                  <h6><a href="index.html">Home</a></h6>
+                  <h6><a href="index.html">Department</a></h6>
+                  <h6><a href="about.html">About</a></h6>
+                  <h6><a href="contact.html">Contanct</a></h6>
+              </div>
+              <!--  SECOND BLOCK -->
+              <div class="col-lg-3  col-sm-6  footersecondblock">
+                <h5 class="pb-3">ADDRESS</h5>
+                <h6>D.No 8-19-4/6,</h6>
+                <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
+                <h6>Chagantivari Street,</h6>
+                <h6>KAKINADA ANDHRA PRADESH-5333004</h6>
+              </div>
+              <!--  THIRD BLOCK -->
+              <div class="col-lg-2  col-sm-6  footerthirdblock">
+                <h5 class="pb-3">OPEN</h5>
+                <h6>Mon-Fri 8AM-8PM</h6>
+                <h6>Sat 8AM-8PM</h6>
+                <h6>Sun 8AM-8PM</h6>
               </div>
           </div>
-          <!--  FIRST BLOCK -->
-          <div class="col-lg-2  col-sm-6 footerfirstblock">
-              <h5 class="pb-3">QUICK LINKS</h5>
-              <h6><a href="index.html">Home</a></h6>
-              <h6><a href="index.html">Department</a></h6>
-              <h6><a href="about.html">About</a></h6>
-              <h6><a href="contact.html">Contanct</a></h6>
-          </div>
-          <!--  SECOND BLOCK -->
-          <div class="col-lg-3  col-sm-6  footersecondblock">
-            <h5 class="pb-3">ADDRESS</h5>
-            <h6>D.No 8-19-14/5,</h6>
-            <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
-            <h6>Chagantivari Street, KAKINADA-5333004</h6>
-          </div>
-          <!--  THIRD BLOCK -->
-          <div class="col-lg-2  col-sm-6  footerthirdblock">
-            <h5 class="pb-3">OPEN</h5>
-            <h6>Mon-Fri 8AM-8PM</h6>
-            <h6>Sat 8AM-8PM</h6>
-            <h6>Sun 8AM-8PM</h6>
-          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
-</footer>
-<!--  ENDING  FOOTER -->
+    </section>
+    </footer>
+    
+    <!--  ENDING  FOOTER -->
 
 
 </body>
