responsive for index page

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                       <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
                   </li>
               </div> -->
-               <div class="col-3 ps-5 me-5"> 
+               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
                  <li class="nav-item ps-5 me-5">
                     <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
                  </li>
                </div>
-              <div class="col-3 ms-5"> 
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
                   <li class="nav-item mt-3  navbarphonenumber">
                     <div class="row"> 
                         <div class="col-3 ps-2"> 
@@ -70,7 +70,7 @@
                     </div>
                   </li>
               </div>
-              <div class="col-3 ms-5  mt-2 navbarappoinment"> 
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
                   <li class="nav-item ps-5">
                       <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
                   </li>
@@ -117,7 +117,7 @@
                                 <br>
                                 <button type="button" class="btn btn-outline-primary">Learn more</button>
                             </div>
-                            <div class="col-lg-6 col-sm-6 col-md-12 ">
+                            <div class="col-lg-6 col-sm-6 col-md-12">
                                 <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto">
                             </div>
                     </div>
@@ -159,9 +159,9 @@
                 <div class="col-lg-6 col-sm-12 col-md-12">
                     <img src="assets/img/image2.png"  class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-6 col-sm-12 col-md-12">
-                    <h1 class="mb-3">Are you looking for the <br>
-                      Best Cometic Gynecology Hospital in Kakinada ?</h1>
+                <div class="col-lg-6 col-sm-12 col-md-12 p-5 mt-5">
+                    <h1 class="mb-3 pt-3">Are you looking for the <br>
+                      Best Cometic Gynecology<br> Hospital in Kakinada ?</h1>
                     <h6 class="pe-5">Your search ends with Aurna Hospital Couples Clinic. Our goal is to increase your self-confidence and well-being through our specialized cosmetic gynecology services.</h6>
                     <br>
                     <br>
@@ -376,12 +376,9 @@
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                       <div class="accordion-body">
                         <!-- <strong>This is the first item's accordion body.</strong> -->
-                       <li>Hymenoplasty</li>
-                       <li>Labiominoraplasty</li>
-                       <li>Labiomajoraplasty</li>
-                       <li>Clitoral hood reduction</li>
-                       <li>Clitoral unhooding</li>
-                       <li>Monsplasty</li>
+                       <li>Erectile Dysfunction </li>
+                       <li>Urine Incontinence </li>
+                       <li>Premature Ejaculation </li>
                        <!-- <code>.accordion-body</code> -->
                        <a href="male.html" class="btn btn-primary">Click Here</a>
                       </div>
